--- a/SC4DP2022_wpf/SC4DP2022_wpf/SC4DP2022_wpf.csproj
+++ b/SC4DP2022_wpf/SC4DP2022_wpf/SC4DP2022_wpf.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
   </ItemGroup>
 
