--- a/SC4DP2022_wpf/SC4DP2022_wpf/SC4DP2022_wpf.csproj
+++ b/SC4DP2022_wpf/SC4DP2022_wpf/SC4DP2022_wpf.csproj
@@ -7,11 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="refresh_icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="refresh_icon.png" />
   </ItemGroup>
 
 </Project>
