--- a/SC4DP2022_wpf/SC4DP2022_wpf/SC4DP2022_wpf.csproj
+++ b/SC4DP2022_wpf/SC4DP2022_wpf/SC4DP2022_wpf.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="refresh_icon.png" />
+    <None Remove="settings_icon.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,6 +21,7 @@
 
   <ItemGroup>
     <Resource Include="refresh_icon.png" />
+    <Resource Include="settings_icon.png" />
   </ItemGroup>
 
   <ItemGroup>
